--- a/notes/templates/matieres/index.html
+++ b/notes/templates/matieres/index.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <ul class="vertical menu accordion-menu" data-accordion-menu>
+    <h1>Listes des Matieres</h1>
     <li>
       <a href="#">Liste des Matieres</a>
         <ul class="menu vertical nested">
