--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -20,7 +20,7 @@
             <li class="menu-text">PROJET NOTES</li>
             <li><a href="{% url 'notes:eleves' %}">Liste des étudiants</a></li>
             <li><a href="{% url 'notes:matieres' %}">Liste des matieres</a></li>
-            <li><a href="#0">Liste des UEs</a></li>
+            <!-- <li><a href="#0">Liste des UEs</a></li> -->
             <li class="has-submenu">
               <a href="#0">Niveaux</a>
               <ul class="submenu menu vertical" data-submenu>
@@ -33,141 +33,11 @@
         </div>
         <div class="top-bar-right">
           <ul class="menu">
-            <li><input type="search" placeholder="Search"></li>
-            <li><button type="button" class="button">Search</button></li>
+            <!-- <li><input type="search" placeholder="Search"></li>
+            <li><button type="button" class="button">Search</button></li> -->
           </ul>
         </div>
       </div>
-      
-      <!-- <ul class="dropdown menu" data-dropdown-menu>
-        <li>
-          <a href="#">Drop Menu</a>
-          <ul class="menu">
-            <li><a href="#">Étudiants,</a>
-              <ul class="menu">
-                <li><a href="#">Liste</a></li>
-                <li><a href="#">Details</a></li>
-              </ul>
-            </li>
-            <li><a href="#">UEs</a>
-              <ul>
-                <li><a href="#">Liste</a></li>
-                <li><a href="#">Details</a></li>
-              </ul>   
-            </li>
-            <li><a href="#">Niveaux</a>
-              <ul>
-                <li><a href="{% url 'notes:pdf' %}" target="_blank">Toutes les notes</a></li>
-                <li><a href="{% url 'notes:pdf_niveau' 1 %}" target="_blank">L1</a></li>
-                <li><a href="{% url 'notes:pdf_niveau' 2 %}" target="_blank">L2</a></li>
-                <li><a href="{% url 'notes:pdf_niveau' 3 %}" target="_blank">L3</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul> -->
-      
-      
-      <!-- <div class="grid-x grid-padding-x">
-        <div class="cell small-6 small-order-2 medium-order-1">
-          This column will come second on small, and first on medium and larger.
-        </div>
-        <div class="cell small-6 small-order-1 medium-order-2">
-          This column will come first on small, and second on medium and larger.
-        </div>
-      </div> -->
-  
-      
-      <!-- <div class="row">
-        <div class="row small-up-2 medium-up-3 large-up-4">
-          <div class="column column-block">
-            <p style="border : 1px solid red">Lorem ipsum dolor sit.</p>
-          </div>
-          <div class="column column-block">
-            <p style="border : 1px solid red">Lorem ipsum dolor sit.</p>
-          </div>
-          <div class="column column-block">
-            <p style="border : 1px solid red">Lorem ipsum dolor sit.</p>
-          </div>
-          <div class="column column-block">
-            <p style="border : 1px solid red">Lorem ipsum dolor sit.</p>
-          </div>
-          <div class="column column-block">
-            <p style="border : 1px solid red">Lorem ipsum dolor sit.</p>
-          </div>
-          <div class="column column-block">
-            <p style="border : 1px solid red">Lorem ipsum dolor sit.</p>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="row" style="border : 1px solid red">
-        <div class="columns small-2 large-2">col1</div>
-        <div class="columns small-4 large-10">
-          <div class="row small-up-2 medium-up-3 large-up-4">
-            <div class="column column-block">
-              <p>grille1</p>
-            </div>
-            <div class="column column-block">
-              <p>grille2</p>
-            </div>
-            <div class="column column-block">
-              <p>grille3</p>
-            </div>
-            <div class="column column-block">
-              <p>grille4</p>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-
-      <!-- small -->
-      <!-- <div class="row">
-        <div class="columns small-2">2</div>
-        <div class="columns small-10">10</div>
-      </div>
-      <div class="row">
-        <div class="columns small-3">3</div>
-        <div class="columns small-9">9</div>
-      </div> -->
-
-      <!-- medium -->
-      <!-- <div class="row">
-        <div class="columns medium-2">2</div>
-        <div class="columns medium-10">10</div>
-      </div>
-      <div class="row">
-        <div class="columns medium-3">3</div>
-        <div class="columns medium-9">9</div>
-      </div>
-      <div class="row">
-        <div class="columns medium-3">3</div>
-        <div class="columns medium-9">9</div>
-      </div> -->
-
-      <!-- large -->
-      <!-- <div class="row">
-        <div class="columns large-1">1</div>
-        <div class="columns large-11">11</div>
-      </div>
-      <div class="row">
-        <div class="columns large-1">1</div>
-        <div class="columns large-10 large-offset-1">10, offset 1</div>
-      </div>
-      <div class="row">
-        <div class="columns large-1">1</div>
-        <div class="columns large-9 large-offset-2">9, offset 2</div>
-      </div>
-      <div class="row">
-        <div class="columns large-1">1</div>
-        <div class="columns large-8 large-offset-3">8, offset 3</div>
-      </div> -->
-
-
-
-
-
       <div class="p-8">
         {% block content %}{% endblock %}
       </div>
